Add OAuth authentication
